# webapp-manager

./: .gitignore  README.md  install.sh  it.mijorus.webappmanager.json  meson.build
data/: it.mijorus.webappmanager.appdata.xml.in  it.mijorus.webappmanager.desktop.in  it.mijorus.webappmanager.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  lt.po  meson.build
src/: WebappManagerWindow.py  common.py  main.py  meson.build  webappmanager.gresource.xml  webappmanager.in  window.py  window.ui
src/gtk/: webapp-manager.ui
